v 0.0.3 easier use of logo text, modal text in css

--- a/inst/assets/main.css
+++ b/inst/assets/main.css
@@ -165,3 +165,7 @@ span.navbar-title {
 .basic-header a {
   color: #cc9f2e;
 }
+
+.modal-content {
+  font-family: "Nunito Sans", Arial, sans-serif;
+}
